# CmakeCrossPlatformDemo

./: CMakeLists.txt  README.md  generate_sln.bat  interface.cpp  interface.h
lib/libdependency/: CMakeLists.txt  apiClass.cpp
lib/libdependency/include/: apiClass.hh
